--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ h2 {
     background-color: #800000;
     color: white;
     height: 45px;
-    margin-bottom: 0px;
+    padding-top: 10px;
+    padding-left: 5px;
 }
 
 #h1Div {
