--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,19 @@ nav a {
 
 footer {
     background-color: #800000;
+    height: 30px;
+    text-align: center;
+}
+
+footer a {
+    padding-left: 10px;
+    padding-right: 10px;
     color: white;
 }
 
 div {
     background-color: lightgray;
     text-align: left;
-    padding-left: 5px;
     padding-bottom: 20px;
 }
 
